<resources>
    <string name="app_name" translatable="false">StartupWizard</string>
    <string name="welcome">Hi there</string>
    <string name="startButton">Start</string>
    <string name="chooseLanguageTitle">Choose your language</string>
    <string name="cancel">Cancel</string>
    <string name="password_none">Password is empty</string>
    <string name="search_wifi">Searching for WLAN networks...</string>
    <string name="no_wifi">No network connection available</string>
    <string name="fail_connect_wifi">Unable to connect to the network, please try again</string>
    <string name="connect_wifi">Connect to WLAN network</string>
    <string name="choose_wifi">Select Network</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="set_finish">Finish</string>
    <string name="wait">Please wait</string>
    <string name="password">Password</string>
    <string name="sure">Sure</string>
    <string name="show_password">Show Password</string>
    <string name="data">Date</string>
    <string name="time">Time</string>
    <string name="data_time">Date and Time</string>
    <string name="data_time_set">Adjust if needed</string>
    <string name="system_nv">Navigation Mode</string>
    <string name="system_ge">Gesture navigation</string>
    <string name="system_bu">Three button navigation</string>
    <string name="ge_tip">Slide up at the bottom to enter the main screen, and slide the edges on both sides to return to the previous page</string>
    <string name="bu_tip">Use the bottom button on the screen to switch pages</string>
</resources>