<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:paddingTop="100dp"
            android:src="@drawable/baseline_gesture" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/system_nv"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/gestural_lottie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie_system_nav_fully_gestural" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/button_lottie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie_system_nav_3_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_gesture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="true"
                        android:gravity="center"
                        android:paddingEnd="10dp"
                        android:text="@string/system_ge"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/system_bu"
                        android:textSize="18sp" />

                </LinearLayout>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/ge_tip" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/bu_tip" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="50dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="#2160E5"
                android:textSize="15sp"
                android:visibility="gone"
                tools:ignore="HardcodedText,RtlSymmetry" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/skip"
                android:textColor="#2160E5"
                android:textSize="15sp"
                tools:ignore="HardcodedText,RtlSymmetry" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>